Modified it so that we could just 'reload' a page of the formwizard. This was needed as having a fixed height created a pretty ugly whitespace when switching from predefined template to 'Custom' or vice versa. (show the qualities or not). Now it will resize the outerwraper and make things look a bit nicer. Also cleaned up some JS in the newShow file to make jsHint happier.

--- a/data/css/style.css
+++ b/data/css/style.css
@@ -122,10 +122,6 @@ div.formpaginate .prev, div.formpaginate .next {
   overflow: hidden;
   clear: both;
 }
-.stepDiv > #customQualityWrapper {
-  height: 190px;
-  overflow: auto;
-}
 #customQualityWrapper div.component-group-desc {
   float:left;
   width:165px;
